[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-support-triage"
version = "0.1.0"
description = "A support triage environment for OpenEnv"
# This fixes the "Missing required dependency" issue
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "requests",
    "pydantic",
    "openenv-core>=0.2.0" 
]

# This fixes the "Missing [project.scripts] server" issue
[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]